// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButtonOverlay should inject the overlay 1`] = `
<span
  className="theme-tc-action-button-positionned"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    onClick={undefined}
    onEntering={[Function]}
    onExited={[Function]}
    overlay={
      <Popover
        bsClass="popover"
        id={undefined}
        placement="right"
      >
        <Inject
          component="Overlay"
          getComponent={[Function]}
        />
      </Popover>
    }
    placement={undefined}
    rootClose={true}
    trigger="click"
  >
    <div>
      wrap me
    </div>
  </OverlayTrigger>
</span>
`;

exports[`ActionButtonOverlay should prevent the scrolling 1`] = `
<span
  className="theme-tc-action-button-positionned"
>
  <OverlayTrigger
    container={
      ActionButtonOverlay {
        "context": Object {},
        "onClick": [Function],
        "onExited": [Function],
        "props": Object {
          "children": <div>
            wrap me
      </div>,
          "overlayComponent": <div>
            Overlay
      </div>,
          "preventScrolling": true,
        },
        "refs": Object {},
        "setTriggerElement": [Function],
        "state": Object {
          "placement": undefined,
        },
        "updater": Updater {
          "_callbacks": Array [],
          "_renderer": ReactShallowRenderer {
            "_context": Object {},
            "_element": <ActionButtonOverlay
              overlayComponent={
                      <div>
                              Overlay
                      </div>
              }
              preventScrolling={true}
      >
              <div>
                      wrap me
              </div>
      </ActionButtonOverlay>,
            "_forcedUpdate": false,
            "_instance": [Circular],
            "_newState": null,
            "_rendered": <span
              className="theme-tc-action-button-positionned"
      >
              <OverlayTrigger
                      container={[Circular]}
                      defaultOverlayShown={false}
                      onClick={undefined}
                      onEntering={[Function]}
                      onExited={[Function]}
                      overlay={
                              <Popover
                                      bsClass="popover"
                                      id={undefined}
                                      placement="right"
                              >
                                      <div>
                                              Overlay
                                      </div>
                              </Popover>
                      }
                      placement={undefined}
                      rootClose={true}
                      trigger="click"
              >
                      <div>
                              wrap me
                      </div>
              </OverlayTrigger>
      </span>,
            "_rendering": false,
            "_updater": [Circular],
          },
        },
      }
    }
    defaultOverlayShown={false}
    onClick={undefined}
    onEntering={[Function]}
    onExited={[Function]}
    overlay={
      <Popover
        bsClass="popover"
        id={undefined}
        placement="right"
      >
        <div>
          Overlay
        </div>
      </Popover>
    }
    placement={undefined}
    rootClose={true}
    trigger="click"
  >
    <div>
      wrap me
    </div>
  </OverlayTrigger>
</span>
`;

exports[`ActionButtonOverlay should wrap the children with an overlay 1`] = `
<span
  className="theme-tc-action-button-positionned"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    onClick={undefined}
    onEntering={[Function]}
    onExited={[Function]}
    overlay={
      <Popover
        bsClass="popover"
        id="myId"
        placement="right"
      >
        <div>
          Overlay
        </div>
      </Popover>
    }
    placement="top"
    rootClose={true}
    trigger="click"
  >
    <div>
      wrap me
    </div>
  </OverlayTrigger>
</span>
`;
